--- a/swipe.html
+++ b/swipe.html
@@ -44,166 +44,30 @@ checkLogin();
 
 <div class="breed-detail-wrap">
     <div class="container">
-  <header class="profilebanner">
+
+
+<header class="profilebanner">
 <div class="header-swipers">
 <div class="swiper-container header-swiper-back-2 swiper-container-coverflow swiper-container-3d swiper-container-vertical">
 
 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 
 <div class="swiper-container header-swiper-back-1 swiper-container-coverflow swiper-container-3d swiper-container-horizontal">
-<div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(-3165.5px, 0px, 0px); perspective-origin: 3840px 50%;">
-
-
-
-
-<div class="swiper-slide" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -407.143px) rotateX(0deg) rotateY(203.571deg); z-index: -3; margin-right: 300px;"></div>
-
-<div class="swiper-slide" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -271.429px) rotateX(0deg) rotateY(135.714deg); z-index: -2; margin-right: 300px;"></div>
-
-<div class="swiper-slide swiper-slide-prev" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -135.714px) rotateX(0deg) rotateY(67.8571deg); z-index: 0; margin-right: 300px;"></div>
-
-<div class="swiper-slide swiper-slide-active" style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg); z-index: 1; margin-right: 300px;"></div>
 
 </div>
-<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 
 
 <div class="swiper-container header-swiper-front swiper-container-coverflow swiper-container-3d swiper-container-horizontal">
 
-<div class="swiper-button-next swiper-button-white swiper-button-disabled" tabindex="0" role="button" aria-label="Next slide" aria-disabled="true"></div>
-<div class="swiper-button-prev swiper-button-white" tabindex="0" role="button" aria-label="Previous slide" aria-disabled="false"></div>
+<div class="swiper-button-next swiper-button-white swiper-button-disabled" role="button" aria-label="Next slide"></div>
+<div class="swiper-button-prev swiper-button-white" role="button" aria-label="Previous slide"></div>
 
-<div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(-2425.5px, 0px, 0px); perspective-origin: 3100px 50%;">
-
-
-
-<div class="swiper-slide" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -337.5px) rotateX(0deg) rotateY(168.75deg); z-index: -2; margin-right: 100px;">
-<img src="http://vantageappspro.com/pets-app/images/cat.png"/>
-
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-						<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
+<div class="swiper-wrapper" id="add_pets_profile"></div>
 
 </div>
-
-
-
-
-
-<div class="swiper-slide" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -225px) rotateX(0deg) rotateY(112.5deg); z-index: -1; margin-right: 100px;">
-<img src="http://vantageappspro.com/pets-app/images/cat.png"/>
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-						<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
-</div>
-
-<div class="swiper-slide swiper-slide-gallery swiper-slide-prev" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -112.5px) rotateX(0deg) rotateY(56.25deg); z-index: 0; margin-right: 100px;">
-<div class="swiper-container swiper-gallery-top swiper-container-horizontal">
-<div class="slide-title demo-iframe-title">3</div>
-<div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(-3240px, 0px, 0px);">
-<div class="swiper-slide swiper-lazy swiper-lazy-loaded" style="width: 100%; background-image: url(&quot;http://vantageappspro.com/pets-app/images/cat.png&quot;); margin-right: 10px;">
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-						<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
-</div>
-<div class="swiper-slide swiper-lazy swiper-lazy-loaded" style="width: 100%; background-image: url(&quot;http://vantageappspro.com/pets-app/images/slider01.jpg&quot;); margin-right: 10px;">
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-						<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
-</div>
-<div class="swiper-slide swiper-lazy swiper-lazy-loaded" style="width: 100%; background-image: url(&quot;http://vantageappspro.com/pets-app/images/cat.png&quot;); margin-right: 10px;">
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-						<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
-</div>
-<div class="swiper-slide swiper-lazy swiper-lazy-loaded swiper-slide-prev" style="width: 100%; background-image: url(&quot;http://vantageappspro.com/pets-app/images/slider01.jpg&quot;); margin-right: 10px;">
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-						<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
-</div>
-<div class="swiper-slide swiper-lazy swiper-lazy-loaded swiper-slide-active" style="width: 100%; background-image: url(&quot;http://vantageappspro.com/pets-app/images/cat.png&quot;); margin-right: 10px;">
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-						<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
-</div>
-</div>
-<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-
-<div class="swiper-container swiper-gallery-thumbs swiper-container-horizontal">
-<div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(-0px, 0px, 0px);">
-<div style="background-image: url(&quot;http://vantageappspro.com/pets-app/images/slideimg.png&quot;); width: 10px; margin-right: 10px;" class="swiper-slide"></div>
-<div style="background-image: url(&quot;http://vantageappspro.com/pets-app/images/slideimg.png&quot;); width: 10px; margin-right: 10px;" class="swiper-slide"></div>
-<div style="background-image: url(&quot;http://vantageappspro.com/pets-app/images/slideimg.png&quot;); width: 10px; margin-right: 10px;" class="swiper-slide"></div>
-<div style="background-image: url(&quot;http://vantageappspro.com/pets-app/images/slideimg.png&quot;); width: 10px; margin-right: 10px;" class="swiper-slide swiper-slide-prev"></div>
-<div style="background-image: url(&quot;http://vantageappspro.com/pets-app/images/slideimg.png&quot;); width: 10px; margin-right: 10px;" class="swiper-slide swiper-slide-active"></div>
-</div>
-<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-
-
-
-
-<div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(0px, -2020px, 0px); perspective-origin: 2330px 50%;">
-
-
-<div class="swiper-slide" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -351.724px) rotateX(-175.862deg) rotateY(0deg); z-index: -3; margin-bottom: 100px;"></div>
-
-<div class="swiper-slide" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -234.483px) rotateX(-117.241deg) rotateY(0deg); z-index: -1; margin-bottom: 100px;"></div>
-
-<div class="swiper-slide swiper-slide-prev" style="transition-duration: 0ms; transform: translate3d(0px, 0px, -117.241px) rotateX(-58.6207deg) rotateY(0deg); z-index: 0; margin-bottom: 100px;"></div>
-
-<div class="swiper-slide swiper-slide-active" style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg); z-index: 1; margin-bottom: 100px;"></div>
-
-
-
-</div>
-</div>
-
-
-<div class="swiper-slide last-centered-slide swiper-slide-active" style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg); z-index: 1; margin-right: 100px;">
-<img src="images/cat.png"/>
-<div class="pet-dtl">
-				<span><label>Pet Name:</label>Poodle</span>
-				<span><label>Pet Age:</label>4 yrs</span>
-				<span><label>Owner Name:</label>Sant joseb</span>
-				<span><label>Town:</label>San Diego CA</span>
-				<div class="idetail"><a href="breed-detail.html"><img src="images/i.png"/></a></div>
-</div>
-</div>
-
-</div>
-<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
 </div>
 </header>
  
-<div class="breedSharebtn"> <a href="#" data-toggle="modal" data-target="#report_user" class="btn btn-danger float-left rept-btn" >Report Rex</a></div>
 
 <div id="report_user" class="modal fade" role="dialog">
   <div class="modal-dialog">
@@ -237,7 +101,7 @@ checkLogin();
         </table>
     </div>
 </div>
-<script src="js/owl.carousel.js"></script> 
+<!--<script src="js/owl.carousel.js"></script> 
 <script>
 $('.owl-carousel').owlCarousel({
     loop:false,
@@ -247,8 +111,27 @@ $('.owl-carousel').owlCarousel({
 	paginations:false,
 	items: 1   
 })
-</script>
+</script>-->
 <script src="js/swiper.js.download"></script>
 <script src="js/main.js.download"></script>
+<script type="text/javascript">
+var login_id = localStorage.getItem('cust_id');
+$.ajax({
+	 type:'POST',
+	 url:siteurl + 'common/searchbreed',
+	 dataType:'json',
+	 data:{login_id:login_id},
+	 crossDomain:true,
+	 success:function(data){
+		 
+		 	if(data['success'])
+			{
+		 		$('#add_pets_profile').html(data['success']);
+			}else{
+				//window.location = 'no_results.html';	
+			}
+	   }
+});
+</script>
 </body>
 </html>
