--- a/swipe.html
+++ b/swipe.html
@@ -147,7 +147,7 @@ var galleryThumbsSwiper=new Swiper('.swiper-gallery-thumbs',{slidesPerView:5,spa
 </script>
 <script type="text/javascript">
 $(function() {
-  $("#test").swipe( {
+  $(".profile-swipes").swipe( {
     
     swipe:function(event, direction, distance, duration, fingerCount, fingerData) {
       alert("You swiped " + direction );  
