--- a/edit-profile.html
+++ b/edit-profile.html
@@ -26,7 +26,7 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="javascript:void(0);">Home <span class="sr-only">Profile</span></a>
+        <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);">Setting</a>
