--- a/swipe.html
+++ b/swipe.html
@@ -151,7 +151,8 @@ $(function() {
     
     swipe:function(event, direction, distance, duration, fingerCount, fingerData) {
       //alert("You swiped " + direction ); 
-	  
+	 var prof_id =  $('.swiper-slide-active').attr("data-id");
+	 alert(prof_id);
 	   
     }
   });
