--- a/your-connections.html
+++ b/your-connections.html
@@ -3,30 +3,21 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <meta name="description" content="">
 <meta name="author" content="">
 <title>Animal App</title>
-<!-- Bootstrap CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- /Bootstrap CSS -->
-
-<!-- Font Awesome CSS -->
 <link rel="stylesheet" href="css/font-awesome.min.css">
-<!-- /Font Awesome CSS -->
-
-<!-- Font Awesome CSS -->
 <link rel="stylesheet" href="css/owl.theme.default.css">
-<!-- /Font Awesome CSS -->
-
-<!-- Font Awesome CSS -->
 <link rel="stylesheet" href="css/owl.carousel.css">
-<!-- /Font Awesome CSS -->
-
-<!-- Common Style CSS -->
 <link rel="stylesheet" href="css/style.css">
-<!-- /Common Style CSS -->
-<script src="js/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/function.js"></script>
+<script type="text/javascript">
+ checkLogin();
+</script>
 </head>
 
 <body class="bottom-links-bar">
@@ -113,7 +104,5 @@
         </table>
     </div>
 </div>
-<script src="js/jquery-3.2.1.slim.min.js"></script> 
-<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
