--- a/edit-profile.html
+++ b/edit-profile.html
@@ -545,7 +545,7 @@ function addProfileinfo(){
 		 
 	   	if(data['success'])
 		{
-			$('#common_popup').html('Profile updated auccessfully.');
+			$('#common_popup').html('Profile updated successfully.');
 			$('#modal_common').modal('show');
 		}
 	   }
