--- a/no_results.html
+++ b/no_results.html
@@ -14,7 +14,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/function.js"></script> 
 <script type="text/javascript">
-//checkLogin();
+checkLogin();
 </script>
 </head>
 
@@ -27,7 +27,7 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="javascript:void(0);">Home <span class="sr-only">Profile</span></a>
+        <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);">Setting</a>
