--- a/breed-detail.html
+++ b/breed-detail.html
@@ -78,12 +78,12 @@ document.addEventListener("deviceready", checkdeviceLogin, false);
 <script src="js/owl.carousel.js"></script> 
 <script type="text/javascript">
 function loadProfile(){
-	
+var login_id = localStorage.getItem('cust_id');	
 $.ajax({
 	 type: 'POST',
 	 url: siteurl + 'common/common/userProfile',
 	 dataType: 'json',
-	 data: {profile_id:gup('profile_id')},
+	 data: {profile_id:gup('profile_id'),login_id:login_id},
 	 crossDomain: true,
 	 success: function(data){
 		 if(data['success'])
