--- a/edit-profile.html
+++ b/edit-profile.html
@@ -172,11 +172,9 @@
 			//alert('Error!!');
 			
 		},{
-			quality: 40, 
+			quality: 60, 
 			correctOrientation: true,
-			allowEdit : true,
-			targetWidth: 200,
-            targetHeight: 200,						
+			allowEdit : false,								
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -235,11 +233,9 @@
 			//alert('Error!!');
 			
 		},{
-			quality: 40, 
+			quality: 60, 
 			correctOrientation: true,
-			allowEdit : true,
-			targetWidth: 200,
-            targetHeight: 200,						
+			allowEdit : false,									
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -291,11 +287,9 @@
 			//alert('Error!!');
 			
 		},{
-			quality: 40, 
+			quality: 60, 
 			correctOrientation: true,
-			allowEdit : true,
-			targetWidth: 200,
-            targetHeight: 200,						
+			allowEdit : false,							
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -348,11 +342,9 @@ function getImage3() {
 			//alert('Error!!');
 			
 		},{
-			quality: 40, 
+			quality: 60, 
 			correctOrientation: true,
-			allowEdit : true,
-			targetWidth: 200,
-            targetHeight: 200,						
+			allowEdit : false,								
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -405,11 +397,9 @@ function getImage4() {
 			//alert('Error!!');
 			
 		},{
-			quality: 40, 
+			quality: 60, 
 			correctOrientation: true,
-			allowEdit : true,
-			targetWidth: 200,
-            targetHeight: 200,						
+			allowEdit : false,									
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
