--- a/edit-profile.html
+++ b/edit-profile.html
@@ -174,7 +174,9 @@
 		},{
 			quality: 60, 
 			correctOrientation: true,
-			allowEdit : false,								
+			allowEdit : true,
+			targetWidth: 500,
+            targetHeight: 500,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -235,7 +237,9 @@
 		},{
 			quality: 60, 
 			correctOrientation: true,
-			allowEdit : false,									
+			allowEdit : true,
+			targetWidth: 500,
+            targetHeight: 500,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -289,7 +293,9 @@
 		},{
 			quality: 60, 
 			correctOrientation: true,
-			allowEdit : false,							
+			allowEdit : true,
+			targetWidth: 500,
+            targetHeight: 500,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -344,7 +350,9 @@ function getImage3() {
 		},{
 			quality: 60, 
 			correctOrientation: true,
-			allowEdit : false,								
+			allowEdit : true,
+			targetWidth: 500,
+            targetHeight: 500,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -397,9 +405,11 @@ function getImage4() {
 			//alert('Error!!');
 			
 		},{
-			quality: 60, 
+			quality: 50, 
 			correctOrientation: true,
-			allowEdit : false,									
+			allowEdit : true,
+			targetWidth: 500,
+            targetHeight: 500,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
