--- a/swipe.html
+++ b/swipe.html
@@ -82,6 +82,7 @@ $.ajax({
 						
 					 }else{
 						//alert('You have no more records.'); 
+						likeProfile(login_id, profile_id);
 						$('#common_popup').html('You have no more records.');
 						 $('#modal_common').modal('show');
 					 }
