--- a/phone-login.html
+++ b/phone-login.html
@@ -87,7 +87,7 @@ document.addEventListener("deviceready", checkdeviceLogin, false);
             <h3>Enter your mobile number</h3>
             <div class="phone-login-field">
                 <div class="countryflag"><img src="images/flag1.png" alt=""></div>
-                <input type="text" maxlength="12" name="customer_mobile" id="customer_mobile" class="form-control" placeholder="+1">
+                <input type="text" maxlength="12" name="customer_mobile" id="customer_mobile" class="form-control" placeholder="Enter mobile number with country code.">
             </div>
             <button type="button" class="btn btn-block btn-danger" onClick="loginNow();">NEXT</button>
         </div>
