--- a/your-connections.html
+++ b/your-connections.html
@@ -19,13 +19,9 @@
  checkLogin();
 </script>
 </head>
-
 <body class="bottom-links-bar" onLoad="showConnections();">
 <nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
-    <span class="navbar-toggler-icon"><img src="images/menubar.png"/></span>
-  </button>
-  
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"><img src="images/menubar.png"/></span></button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
@@ -39,7 +35,6 @@
     </ul>
   </div>
 </nav>
-
 <div class="container">
     <div class="your-connections mt-4">
         <h1 class="red">YOUR CONNECTIONS</h1>
@@ -73,7 +68,6 @@
         </table>
     </div>
 </div>
-
 <script type="text/javascript">
 var login_id = localStorage.getItem('cust_id');
 
@@ -104,6 +98,23 @@ function accptInvite(invitation_id){
 			 crossDomain:true,
 			 success:function(data){
 				 window.location = "match.html?id="+data['success'];
+					
+			   }
+		});
+}
+
+function deleteLike(invitation_id){
+	$.ajax({
+			 type:'POST',
+			 url:siteurl + 'account/myconnections/deleteLike',
+			 dataType:'json',
+			 data:{invite_id:invitation_id, login_id:login_id},
+			 crossDomain:true,
+			 success:function(data){
+				 if(data['connection'])
+				 {
+					$('#connections').html(data['connection']); 
+				 }
 					
 			   }
 		});
