--- a/phone-login.html
+++ b/phone-login.html
@@ -116,12 +116,7 @@ document.addEventListener("deviceready", checkdeviceLogin, false);
 </body>
 <script type="text/javascript">
 function validateOtp(){
-	var show_device = 'Model: ' + device_platform + ' RegID:'+device_reg_id;
-	
-	alert(show_device);
-	
-	return false
-	
+		
 	$('.modal').modal('hide');
 	var customer_mob = $('#customer_mob').val();
 	var customer_otp = $('#customer_otp').val();
@@ -130,7 +125,7 @@ function validateOtp(){
 	 type: 'POST',
 	 url: action_url,
 	 dataType: 'json',
-	 data: {customer_mobile:customer_mob,otp:customer_otp, latitude: lat, longitude:longi, device_type: device_platform, device_reg_id:device_reg_id},
+	 data: {customer_mobile:customer_mob,otp:customer_otp, latitude: lat, longitude:longi},
 	 crossDomain: true,
 	 success: function(data){
 		
