--- a/phone-login.html
+++ b/phone-login.html
@@ -27,8 +27,8 @@ var onSuccess = function(position){
 		
 		push.on('registration', function(data)
 		{						
-			device_platform = data.registrationId;
-			device_reg_id = device.platform;
+			device_reg_id = data.registrationId;
+			device_platform = device.platform;
 		});
 					
     };
