--- a/chat.html
+++ b/chat.html
@@ -3,33 +3,40 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <meta name="description" content="">
 <meta name="author" content="">
 <title>Animal App</title>
-<!-- Bootstrap CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- /Bootstrap CSS -->
-
-<!-- Font Awesome CSS -->
 <link rel="stylesheet" href="css/font-awesome.min.css">
-<!-- /Font Awesome CSS -->
-
-<!-- Font Awesome CSS -->
-<link rel="stylesheet" href="css/owl.theme.default.css">
-<!-- /Font Awesome CSS -->
-
-<!-- Font Awesome CSS -->
-<link rel="stylesheet" href="css/owl.carousel.css">
-<!-- /Font Awesome CSS -->
-
-<!-- Common Style CSS -->
 <link rel="stylesheet" href="css/style.css">
-<!-- /Common Style CSS -->
-
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/function.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script type="text/javascript">
+ checkLogin();
+</script>
 </head>
 
 <body class="chat-application">
+<nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
+    <span class="navbar-toggler-icon"><img src="images/menubar.png"/></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0);">Setting</a>
+     </li>
+	   <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
+    </ul>
+  </div>
+</nav>
 <div class="app-content content">
 
 <div class="chat-wrapper container mt-3">
@@ -166,20 +173,5 @@
           
 </div>
 </div>
-
-
-<!--<div class="bottom-fixed-bar">
-    <div class="container">
-        <table class="table">
-          <tr>
-                <td><a href="edit-profile.html"><img src="images/user-icon.png" alt=""></a></td>
-                <td class="text-center"><a href="your-connections.html"><img src="images/heart-icon.png" alt=""></a></td>
-                <td class="text-right"><a href="forums.html"><img src="images/chat-icon.png" alt=""></a></td>
-            </tr>
-        </table>
-    </div>
-</div>-->
-<script src="js/jquery-3.2.1.slim.min.js"></script> 
-<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
