--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <script src="js/function.js"></script>
 <script type="text/javascript">
 
-/*setTimeout(function(){
+setTimeout(function(){
 	window.location = 'login.html';
-}, 3000);*/
+}, 3000);
 
 function checkDeviceGPS(){
 	cordova.plugins.diagnostic.isGpsLocationEnabled(function(enabled){		
@@ -41,7 +41,7 @@ function checkDeviceGPS(){
 	}); 
 }
 
-document.addEventListener("deviceready", checkDeviceGPS, false); 
+//document.addEventListener("deviceready", checkDeviceGPS, false); 
 </script>
 </head>
 
