--- a/phone-login.html
+++ b/phone-login.html
@@ -62,7 +62,7 @@ function checkdeviceLogin(){
 			 }
 		
 }
-document.addEventListener("deviceready", checkdeviceLogin, false);
+document.addEventListener("deviceready", checkdeviceLogin, true);
 </script>
 </head>
 <body>
