--- a/phone-login.html
+++ b/phone-login.html
@@ -32,6 +32,9 @@ function checkdeviceLogin(){
 	device_platform = device.platform;
 	device_reg_id = device.uuid;
 	
+	
+	alert(lat);
+	
 	var push = PushNotification.init({ "android": {"senderID": "22045590689"}, "ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
 		
 		push.on('registration', function(data)
