--- a/phone-login.html
+++ b/phone-login.html
@@ -15,9 +15,26 @@
 <script src="js/function.js"></script>
 <script type="text/javascript">
 
-var lat, longi, device_platform, device_reg_id;    
+var lat, longi, device_platform, device_reg_id;
+var onSuccess = function(position){					  
+			lat =  position.coords.latitude;
+			longi = position.coords.longitude;
+			
+			device_platform = device.platform;
+			device_reg_id = device.uuid;
+			
+			var push = PushNotification.init({ "android": {"senderID": "22045590689"}, "ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
+		
+		push.on('registration', function(data)
+		{						
+			device_reg_id = data.registrationId;
+			device_platform = device.platform;
+		});
+					
+    };
 
-function onError(error){       
+function onError(error){		
+        //alert('message: ' + error.message + '\n');
 		$('.modal').modal('hide');
 		$('#common_popup').html('message: ' + error.message);
 		$('#modal_error').modal('show');
@@ -26,21 +43,15 @@ function onError(error){
 
 function checkdeviceLogin(){
 	
-	lat =  position.coords.latitude;
-	longi = position.coords.longitude;
-	
-	device_platform = device.platform;
-	device_reg_id = device.uuid;
-	
-	var push = PushNotification.init({ "android": {"senderID": "22045590689"}, "ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
-		
-		push.on('registration', function(data)
-		{						
-			device_reg_id = data.registrationId;
-			device_platform = device.platform;
-		});
+	//$("#loadingImg").fadeIn();
 
+	cordova.plugins.diagnostic.isGpsLocationEnabled(function(enabled){
 	
+	if(enabled)
+	{
+			navigator.geolocation.getCurrentPosition(onSuccess, onError, {maximumAge:7000, timeout:7000, enableHighAccuracy:true});
+			
+			setTimeout(function(){
 			
 			if(localStorage.getItem("cust_id") != null)
 			{
@@ -60,15 +71,28 @@ function checkdeviceLogin(){
 				  }
 			   });
 			 }
-		
-}
-document.addEventListener("deviceready", function(){
+				//$("#loadingImg").fadeOut();
+			}, 3000);
+	}else{
+		//alert('Please enable your location settings.');
+		$('#common_popup').html('Please enable your location settings.');
+		$('#modal_error').modal('show');
+		cordova.plugins.diagnostic.switchToLocationSettings();
+	}
 	
-	alert('hello');
-}, true);
+	}, function(error){
+		$('#common_popup').html("The following error occurred: "+error);
+		$('#modal_error').modal('show');
+		//alert("The following error occurred: "+error);
+	});
+}
+
+function init(){
+	document.addEventListener("deviceready", checkdeviceLogin, true);
+}
 </script>
 </head>
-<body>
+<body onLoad="init();">
 <div class="full-height center">
     <div class="container phloginecontainer">
     <form>
@@ -128,10 +152,8 @@ function loginNow(){
 			$('#customer_mobile').addClass('req');
 		}
 	 }
-   });
-	
+   });	
 }
-
 
 function validateOtp(){
 		
@@ -139,10 +161,6 @@ function validateOtp(){
 	var customer_mob = $('#customer_mob').val();
 	var customer_otp = $('#customer_otp').val();
 	var action_url = siteurl + 'account/login/otp';
-	
-	alert('Lat: ' +lat + ' Longitude:' + longi);
-	
-	
 	$.ajax({
 	 type: 'POST',
 	 url: action_url,
