--- a/phone-login.html
+++ b/phone-login.html
@@ -28,7 +28,7 @@ function onSuccess(){
 	
 	lat = position.coords.latitude;
     longi = position.coords.longitude;
-	
+	alert(longi);
 	/*if(localStorage.getItem("cust_id") != null)
 	{
 		var customer_login = localStorage.getItem("cust_id");
