--- a/phone-login.html
+++ b/phone-login.html
@@ -11,11 +11,13 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-<script src="js/bootstrap.min.js"></script>
 <script src="js/function.js"></script>
 <script type="text/javascript">
 
-var lat, longi, device_platform, device_reg_id;
+var lat;
+var longi;
+var device_platform;
+var device_reg_id;
 
 function onError(error){      
 		$('.modal').modal('hide');
@@ -24,7 +26,7 @@ function onError(error){
 }
 
 
-function onSuccess(){
+function onSuccess(position){
 	
 	lat = position.coords.latitude;
     longi = position.coords.longitude;
@@ -51,9 +53,9 @@ function onSuccess(){
 }
 
 
-	document.addEventListener("deviceready", function(){		
-			navigator.geolocation.getCurrentPosition(onSuccess, onError, { enableHighAccuracy: true });		
-	}, false);
+document.addEventListener("deviceready", function(){		
+		navigator.geolocation.getCurrentPosition(onSuccess, onError, { enableHighAccuracy: true });		
+}, false);
 
 </script>
 </head>
@@ -162,4 +164,5 @@ function validateOtp(){
    });
 }
 </script>
+<script src="js/bootstrap.min.js"></script>
 </html>
