--- a/phone-login.html
+++ b/phone-login.html
@@ -31,7 +31,7 @@ function onSuccess(position){
 	lat = position.coords.latitude;
     longi = position.coords.longitude;
 	alert(longi);
-	/*if(localStorage.getItem("cust_id") != null)
+	if(localStorage.getItem("cust_id") != null)
 	{
 		var customer_login = localStorage.getItem("cust_id");
 		$.ajax({
@@ -48,8 +48,7 @@ function onSuccess(position){
 			}
 		  }
 	   });
-	 }*/
-	
+	 }	
 }
 
 
