--- a/chat.html
+++ b/chat.html
@@ -23,28 +23,14 @@ document.addEventListener("deviceready", checkdeviceLogin, false);
 
 </script>
 </head>
-<body class="chat-application">
+<body class="chat-application onlyforchat">
 <nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
-    <span class="navbar-toggler-icon"><img src="images/menubar.png"/></span>
-  </button>
-  
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);">Setting</a>
-     </li>
-	   <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
-    </ul>
-  </div>
+<img src="images/menu-logo.png"/>
+<a href="swipe.html" class="backbtn">Back</a>
 </nav>
 <div class="app-content content">
     <div class="chat-wrapper container mt-3">
-            <h1 class="red"><a class="bkbtn" href="your-connections.html"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a></h1>
+           
             <section class="chat-app-window">           
                 <div class="chats"></div>           
               </section>         
@@ -52,7 +38,8 @@ document.addEventListener("deviceready", checkdeviceLogin, false);
               <section class="chat-app-form">
                 <div class="chat-app-input d-flex">
                   <fieldset class="form-group position-relative has-icon-left col-10 m-0">               
-                    <input type="text" placeholder="Type your message" name="chat_txt" id="chat_txt" class="form-control">               
+                    <input type="text" placeholder="Type your message" name="chat_txt" id="chat_txt" class="form-control"> 
+<a class="sndbtn" href="javascript:void(0);" onClick="addChat();"><img src="images/send.png"/></a>					
                   </fieldset>
                 </div>
               </section>
